# footstep_planner

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: MarkerGenerator.h  borderextraction.h  com_filter.h  convex_hull.h  coordinate_filter.h  curvature_filter_node.h  curvaturefilter.h  data_types.h  foot_collision_filter.h  footstep_planner.h  graham_smith.h  gram_schmidt.h  joints_ordering.h  kinematic_filter.h  kinematics_utilities.h  lipm_filter.h  old_com_filter.h  param_manager.h  pcd_stream_io.hpp  ros_command_interface.hpp  ros_publisher.h  ros_server.h  ros_status_interface.hpp  sampling_surface.h  step_quality_evaluator.h  tilt_filter.h  xml_pcl_io.h
launch/: boxes_atlas.launch  boxes_coman.launch  boxes_walkman.launch  corridor.launch  corridor_atlas.launch  corridor_coman.launch  corridor_obs_atlas.launch  corridor_obs_walkman.launch  corridor_walkman.launch  curvature_filter.launch  decision_planes_coman.launch  fake_pcl.launch  fake_primesense.launch  footstep_planner.launch  passage_handrails_coman.launch  plane_detection.launch  rough3.launch  rviz.rviz  stairs_atlas.launch  stairs_coman.launch  stairs_walkman.launch  static.launch  three_plane_obstacle_coman.launch  twisting_stairs_coman.launch
msg/: Plane.msg  PlaneDetectionResult.msg  fs_command.msg
resources/: another_scene.pcd
src/: MarkerGenerator.cpp  affordances_main.cpp  borderextraction.cpp  com_filter.cpp  convex_hull.cpp  coordinate_filter.cpp  curvature_filter_node.cpp  curvaturefilter.cpp  foot_collision_filter.cpp  footstep_planner.cpp  footstep_planning.cpp  graham_smith.cpp  gram_schmidt.cpp  joints_ordering.cpp  kinematic_filter.cpp  kinematics_utilities.cpp  lipm_filter.cpp  lipm_utils.cpp  main.cpp  old_com_filter.cpp  param_manager.cpp  pcd_io.cpp  plane_segmentation_node.cpp  ros_publisher.cpp  ros_server.cpp  sampling_surface.hpp  step_quality_evaluator.cpp  tilt_filter.cpp  xml_pcl_io.cpp
srv/: PlaneDetection.srv  fs.srv
