<?xml version="1.0"?>
<package>
  <name>plane_segmentation</name>
  <version>0.0.0</version>
  <description>The plane_segmentation package</description>

  <maintainer email="ale@todo.todo">ale</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>srdfdom</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>srdfdom</run_depend>

  <export>
  </export>
</package>
