<?xml version="1.0"?>
<package>
  <name>footstep_planner</name>
  <version>0.0.0</version>
  <description>The footstep_planner package</description>

  <maintainer email="ale@todo.todo">ale</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>gencpp</build_depend>
  <build_depend>orocos_kdl</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>srdfdom</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>gencpp</run_depend>
  <run_depend>orocos_kdl</run_depend>
  
  <export>
  </export>
</package>
